# openvino

./: profile_mha.sh
.github/workflows/: linux.yml
inference-engine/samples/hello_batched_blob/: CMakeLists.txt  main.cpp
inference-engine/src/cldnn_engine/: cldnn_graph.cpp  cldnn_program.cpp
ngraph/python/: requirements_test.txt
src/bindings/python/: requirements_test.txt
src/common/transformations/src/transformations/common_optimizations/: moc_transformations.cpp
src/plugins/intel_cpu/tests/: CMakeLists.txt
src/plugins/intel_gpu/include/intel_gpu/graph/: program.hpp
src/plugins/intel_gpu/include/intel_gpu/primitives/: dynamic_quantize.hpp  fully_connected.hpp
src/plugins/intel_gpu/include/intel_gpu/runtime/: debug_configuration.hpp  format.hpp
src/plugins/intel_gpu/src/graph/: layout_optimizer.cpp  network.cpp  nodes_ordering.cpp  primitive_inst.cpp  program.cpp  program_node.cpp
src/plugins/intel_gpu/src/graph/graph_optimizer/: compile_graph.cpp  prepare_primitive_fusing.cpp  remove_redundant_reorders.cpp  reorder_inputs.cpp  set_layouts.cpp  set_required_layouts.cpp
src/plugins/intel_gpu/src/graph/include/: pass_manager.h  (+2 more)
src/plugins/intel_gpu/src/kernel_selector/: common_types.h  kernel_selector_common.cpp  kernel_selector_utils.cpp  primitive_db.cpp  tensor_type.cpp  tensor_type.h
src/plugins/intel_gpu/src/plugin/: plugin.cpp  transformations_pipeline.cpp
src/plugins/intel_gpu/src/runtime/: debug_configuration.cpp  format.cpp  kernels_cache.cpp
src/plugins/intel_gpu/tests/test_cases/: resample_gpu_test.cpp
tests/: constraints.txt
tests/e2e_tests/: requirements.txt
(+27 files in other folders)
